--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -33,7 +33,7 @@ html(class='no-js')
 		include ../_modules/project-box-mixin.pug
 
 		//- include ../_modules/grid-lines.pug
-		//- include ../_modules/grid-lines-full.pug
+		include ../_modules/grid-lines-full.pug
 
 		//- include ../_modules/intro.pug
 		
