--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -10,7 +10,7 @@ block content
 				ul.social-wrapper
 					li.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3")
 						a(href=linkedin)
-							+link-icon-2
+							+link-icon
 					li.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4")
 						a(href=tw)
 							+tw-icon
