--- a/dev/scss/modules/_slider.scss
+++ b/dev/scss/modules/_slider.scss
@@ -24,6 +24,7 @@
 		width: 100%;
 		height: 100%;
 		overflow: hidden;
+		// background-color: red;
 		@media(min-width: 768px){
 			height: 394px;
 		}
@@ -60,9 +61,6 @@
 					width: 100%;
 					height: auto;
 				}
-			}
-			@media(min-width: 1282px){
-				width: 36vw;
 			}
 		}
 		.inactive-slide{
