--- a/dev/scss/views/_thanks.scss
+++ b/dev/scss/views/_thanks.scss
@@ -7,7 +7,9 @@
 	color: $dark-brown;
 	@media(min-width: 768px){
 		margin-top: -2px;
-		// es debido a los iconos de redes sociales, se crea un espacio
+	}
+	@media(min-width: 1282px){
+		margin-top: getvw(-2vw);
 	}
 	.title-block{
 		color: $black;
@@ -17,29 +19,18 @@
 		height: 18px;
 		position: relative;
 		letter-spacing: 0.018em;
-		// mob
-		// &:after{
-		// 	content: "";
-		// 	position: absolute;
-		// 	left: 0;bottom: -20px;
-		// 	width: 100%;
-		// 	height: 20px;
-		// 	background-color: green;
-		// }
 		@media(min-width: 768px){
-			line-height: 44px;
-			height: 40px;
 			margin-bottom: 12px;
 			margin-top: 8px;
+			line-height: 44px;
+			height: 40px;
 			letter-spacing: .02em;
-			// &:after{
-			// 	content: "";
-			// 	position: absolute;
-			// 	left: 0;bottom: -20px;
-			// 	width: 100%;
-			// 	height: 20px;
-			// 	background-color: green;
-			// }
+		}
+		@media(min-width: 1282px){
+			margin-bottom: getvw(12vw);
+			margin-top: getvw(8vw);
+			line-height: getvw(44vw);
+			height: getvw(40vw);
 		}
 	}
 	p{
@@ -48,30 +39,13 @@
 		line-height: 1.57em;
 		position: relative;
 		letter-spacing: 0.02em;
-		// mob
-		// &:after{
-		// 	content: "";
-		// 	position: absolute;
-		// 	left: 0;
-		// 	bottom: -32px;
-		// 	width: 100%;
-		// 	height: 40px;
-		// 	background-color: green;
-		// }
 		@media(min-width: 768px){
+			margin-bottom: 15px;
 			line-height: 1.8em;
 			padding-left: 16.6667%;
-			margin-bottom: 15px;
-			// desk
-			// &:after{
-			// 	content: "";
-			// 	position: absolute;
-			// 	left: 0;
-			// 	bottom: -15px;
-			// 	width: 100%;
-			// 	height: 28px;
-			// 	background-color: green;
-			// }
+		}
+		@media(min-width: 1282px){
+			margin-bottom: getvw(15vw);
 		}
 	}
 	.social-wrapper{
@@ -87,6 +61,9 @@
 			padding: 0;
 			cursor: pointer;
 			}
+		}
+		@media(min-width: 1282px){
+			width: calc(33.33% - getvw(5vw));
 		}
 	}
 }
