--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -7,15 +7,12 @@ block content
 			.snj-col-9.offset-1.snj-col-md-6.offset-md-3
 				h2.title-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2") Thanks.
 				p.subtitle-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3") We’ll get back to you as soon we possibly can. Meanwhile check our stuff.
-				ul.social-wrapper
-					li.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3")
-						a(href=linkedin)
+				.social-wrapper
+					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3" href=linkedin)
 							+link-icon
-					li.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4")
-						a(href=tw)
+					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4" href=tw)
 							+tw-icon
-					li.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5")
-						a(href=ig)
+					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5" href=ig)
 							+ins-icon
 			a.navigation-btn.btn-pages(href="ourwork.html")
 				span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
