--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -33,6 +33,7 @@
 @import 'modules/_grid-lines-full';
 @import 'modules/_slider';
 @import 'modules/_preloader';
+@import 'modules/_menu';
 
 .img-tester{
 	opacity: .4;
