--- a/dev/scss/global/_type.scss
+++ b/dev/scss/global/_type.scss
@@ -33,12 +33,12 @@
 
 .s2{
 	font-size: 16px;
-	line-height: 16;
+	line-height: 16px;
 }
 
 .t1{
 	font-size: 12px;
-	line-height: 15;
+	line-height: 15px;
 
 }
 
