--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -169,58 +169,53 @@
 				display: none;
 			}
 		}
-		ul{
-			padding-left: 12.5%;
-			li{
-				list-style-type: inherit;
-				text-indent: 15px;
-				@media(min-width: 1282px){
-					text-indent: getvw(15vw);
-				}
-			}
-		}
+		// ul{
+		// 	padding-left: 12.5%;
+		// 	li{
+		// 		list-style-type: inherit;
+		// 		text-indent: 15px;
+		// 		@media(min-width: 1282px){
+		// 			text-indent: getvw(15vw);
+		// 		}
+		// 	}
+		// }
 		.social-wrapper{
+			width: 100%;
 			padding-left: 12.5%;
 			padding-top: 11px;
-			li{	
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			padding-right: 6px;
+			.social-link{	
 				list-style:none;
 				cursor: pointer;
 				animation-duration: 1000ms;
 				height: 18px;
-				// background-color: red;
-				@media(min-width: 1282px){
-					height: getvw(18vw);
-				}
+				display: inline-block;
 				$social-icon-delay: 150ms;
 				&:nth-child(1){animation-delay: $social-icon-delay * 1;}
 				&:nth-child(2){animation-delay: $social-icon-delay * 2;}
 				&:nth-child(3){animation-delay: $social-icon-delay * 3;}
-				a{
-					display: block;
+				svg{
+					fill: $brown;
 					height: 100%;
-					width: 100%;
-					// background-color: yellow;
+				}
+				&:hover{
 					svg{
-						fill: $brown;
-						height: 100%;
-						// background-color: red;
-						&:hover{
-							fill: $cream;
-						}
+						fill: $cream;
 					}
 				}
 			}
 			@media(min-width: 992px){
 				padding-top: 10px;
 				padding-left: 0;
-				padding-right: 34.333333%;
-				a{
-					padding-right: 0px;
-				}
+				padding-right: 0;
+				width: 65.66%;
 			}
 			@media(min-width: 1282px){
 				padding-top: getvw(10vw);
-				li{
+				.social-link{
 					height: getvw(18vw);
 				}
 			}
