--- a/dev/scss/modules/_menu.scss
+++ b/dev/scss/modules/_menu.scss
@@ -30,10 +30,11 @@
 				height: 13px;
 				// background-color: red;
 				margin-bottom: 9px;
+				letter-spacing: 0.02em;
 			}
 			.item-intro{
 				opacity: .6;
-				font-size: 14px;
+				font-size: 12px;
 				// background-color: green;
 				line-height: 15px;
 				height: 13px;
