--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -15,8 +15,8 @@ block content
 					span create
 					span &
 					span consult
-				.line-item
-					.lines-wrapper.jb-cascade(data-cascade="line-fill" data-cascade-delay-mobile="3" data-cascade-delay="3")
+				.line-item.jb-cascade(data-cascade="line-fill" data-cascade-delay-mobile="3" data-cascade-delay="3")
+					.lines-wrapper
 			.about-title
 				p.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5")  We <br> create and consult for lifestyle cultures and industries such as fashion, hospitality, entertainment and more. 
 				p.points.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="6" data-cascade-delay="6") ..
