--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -128,10 +128,12 @@
 	0% {transform: scaleX(0); opacity:0;}
 	100% {transform: scaleX(1);opacity:1;}
 }
-@-webkit-keyframes line-reduce {
-	0% {transform: scaleX(1);}
-	100% {transform: scaleX(.4);}
-}
+// @-webkit-keyframes line-reduce {
+// 	0% {transform: scaleX(1);}
+// 	100% {transform: scaleX(.4);}
+// }
+
+
 @media(min-width: 1282px){
 		//navigation button
 	@-webkit-keyframes fade-up-btn {
