--- a/dev/scss/views/_home.scss
+++ b/dev/scss/views/_home.scss
@@ -240,6 +240,7 @@
 				transform-origin: 50% 50%;
 				width: 100%;
 				height: 100%;
+				@include transitions-ease(.3s);
 			}
 		}
 	}
@@ -319,8 +320,9 @@
 		.line-item{
 			.lines-wrapper{
 				opacity: 1;
-				-webkit-animation: line-reduce .55s cubic-bezier(.25,0,0,.15) forwards;
-				animation: line-reduce .55s cubic-bezier(.25,0,0,.15) forwards;
+				transform: scaleX(.4);
+				// -webkit-animation: line-reduce .55s cubic-bezier(.25,0,0,.15) forwards;
+				// animation: line-reduce .55s cubic-bezier(.25,0,0,.15) forwards;
 			}
 		}
 		.about-title{
