home pixel perfect

--- a/dev/assets/_modules/header.pug
+++ b/dev/assets/_modules/header.pug
@@ -7,4 +7,4 @@ header.snj-container-fluid
 			include ../_modules/nav.pug
 
 			a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
-				span.line-link About Us
+				span.line-link About us
