--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -59,7 +59,7 @@ html(class='no-js')
 			//- img(src="img/testing/thanks_mob.jpg", alt="")
 			//- img(src="img/testing/contact_mob.jpg", alt="")
 			//- img(src="img/testing/message_mob.jpg", alt="")		
-			img(src="img/testing/menu_mob.jpg", alt="")
+			//- img(src="img/testing/menu_mob.jpg", alt="")
 		//- content
 		#main-wrapper
 			block preloader
