--- a/dev/assets/_modules/footer.pug
+++ b/dev/assets/_modules/footer.pug
@@ -10,4 +10,4 @@ mixin footer(scroll)
 				span.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") .
 
 			a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="contact.html")
-				span.line-link Contact Us
+				span.line-link Contact us
