--- a/dev/scss/views/_ourwork.scss
+++ b/dev/scss/views/_ourwork.scss
@@ -26,6 +26,16 @@
 	.wrap-list{
 		display: flex;
 		flex-direction: column;
+		&:after{
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 0;
+			background-color: pink;
+			opacity: .6;
+			height: 10px;
+			width: 200px;
+		}
 	}
 }
 
@@ -37,7 +47,10 @@
 	a{color: $cream;}
 	p.number-project{
 		font-size: 16px;
+		line-height: 17px;
+		height: 14px;
 		position: relative;
+		background-color: green;
 	}
 	@media(min-width: 768px){
 		margin-top: 50px;
@@ -57,9 +70,12 @@
 	}
 	// name
 	.name-project{
-		margin: 2px 0 11px;
+		// margin: 2px 0 11px;
+		margin: 7px 0 11px;
 		font-family: 'Nocturne Serif ExtraBold';
 		position: relative;
+		padding-right: 30%;
+		background-color: red;
 		h2{
 			font-size: 22px;
 		}
@@ -86,6 +102,7 @@
 	}
 	// arrow
 	.arrow-right{
+		background: black;
 		justify-content: flex-end;
 		display: flex;
 		.arrow-wrapper{
