Pixel perfect: Contact mobile listo.

--- a/dev/assets/_modules/inputs-form.pug
+++ b/dev/assets/_modules/inputs-form.pug
@@ -2,7 +2,7 @@ form#inputs-container
 	//- inputs text
 	.input-wrapper
 		input(type="text" name="name" id="Your Name" required)
-		label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="name") Your Name
+		label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="name") Your name
 		span.bar.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="1" data-cascade-delay="1")
 	.input-wrapper
 		input(type="email" name="email" id="email" required)
