--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -6,7 +6,7 @@ block content
 		.row
 			.center-wrapper.snj-col-9.offset-1.snj-col-md-6.offset-md-2
 				
-				h2.subtitle-block.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Get in touch
+				h2.subtitle-block.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Get in touch.
 				//- form inputs
 				include _modules/inputs-form.pug
 
